# haraesume

./: .firebaserc  .gitignore  CLAUDE.md  README.md  agents.md  cover_letter_clean.tex  docker-compose.yml  package-lock.json  resume-test.tex  sample_resume.tex
.claude/agents/: scale-minded-engineer.md
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  entrypoint.sh  go.mod  go.sum  main.go
backend/FirestoreJson/: harae-86aff-firebase-adminsdk-fbsvc-d9fc3179bd.json
backend/agents/: __init__.py  cli.py  graph.py  sanitize.py  state.py  tools.py
backend/auth/: firebase.go
backend/builder/: escape.go  handler.go  types.go
backend/config/: config.go
backend/email/: sender.go
backend/httputil/: ratelimit.go  response.go
backend/latex/: compiler.go  parser.go
backend/llm/: client.go  company.go  coverletter.go  optimizer.go  sanitize.go
backend/resume/: handler.go  state.go  storage.go
backend/src/: latex.rs  llm.rs  main.rs
backend/state/: waitlist.json
backend/state/applications/the team/: Akbari, Deep.tex  CV_Deep.tex
backend/state/user_resumes/user_0f87982f45e034cf1d6370000c0873853b8217b65be82bb19c03eb4f8763276e/: base_resume.tex
backend/waitlist/: handler.go  store.go
frontend/: Dockerfile  README.md  entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  LandingPage.tsx  firebase.ts  index.css  main.tsx  theme.ts
functions/: index.js  package-lock.json  package.json
